--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Header -->
         <header class="text-center mb-12">
             <h1 class="text-4xl md:text-5xl font-bold text-white">Moot 2025 Portal</h1>
-            <p class="text-lg text-gray-400 mt-2">Your complete itinerary and travel guide.</p>
+            <p class="text-lg text-gray-400 mt-2">Itinerary.</p>
         </header>
 
         <!-- Timeline -->
