--- a/order.html
+++ b/order.html
@@ -1,1 +1,4 @@
-<div  id="flipdish-menu" data-restaurant="br11638"></div><script id="flipdish-script" type="text/javascript" charset="UTF-8" src="https://web-order.flipdish.co/client/productionwlbuild/latest/static/js/main.js"></script>
+<!-- If you would like to customize the button, remove or change the "class" attribute inside the <span> tag -->
+<span class="glf-button" data-glf-cuid="169eec51-eaaa-4303-8ece-f5329655063f" data-glf-ruid="91987de6-ddae-4562-9595-07d0668f2a02" >See MENU & Order</span>
+<span class="glf-button reservation" data-glf-cuid="169eec51-eaaa-4303-8ece-f5329655063f" data-glf-ruid="91987de6-ddae-4562-9595-07d0668f2a02" data-glf-reservation="true" >Table Reservation</span>
+<script src="https://www.fbgcdn.com/embedder/js/ewm2.js" defer async ></script>
